--- a/.github/workflows/production-engine.yml
+++ b/.github/workflows/production-engine.yml
@@ -1,6 +1,7 @@
 name: Production Deployment - Engine
 env:
   CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+  CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
 on:
   push:
     branches:
@@ -20,5 +21,6 @@ jobs:
         with:
           packageManager: bun
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           wranglerVersion: "4.13.2"
           command: deploy --minify src/index.ts --env production
